# crypto-collector

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.aarch64  Makefile  build.rs
.claude/: settings.json
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-config-change.sh  handle-cwd-changed.sh  handle-elicitation-result.sh  handle-elicitation.sh  handle-file-changed.sh  handle-instructions-loaded.sh  handle-notification.sh  handle-permission-denied.sh  handle-permission-request.sh  handle-post-compact.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop-failure.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-task-created.sh  handle-teammate-idle.sh  handle-user-prompt-submit.sh  handle-worktree-create.sh  handle-worktree-remove.sh
.moai/: manifest.json
.moai/config/sections/: db.yaml  git-strategy.yaml  llm.yaml  project.yaml  user.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/project/db/: erd.mmd  migrations.md  queries.md  rls-policies.md  schema.md  seed-data.md
.moai/reports/plan-audit/: SPEC-CANDLE-001-review-1.md  SPEC-CANDLE-001-review-2.md  SPEC-CANDLE-001-review-3.md
.moai/specs/SPEC-ALARM-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-API-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-API-002/: acceptance.md  plan.md  progress.md  spec-compact.md  spec.md  tasks.md
.moai/specs/SPEC-API-003/: acceptance.md  plan.md  progress.md  spec.md  tasks.md
.moai/specs/SPEC-API-004/: acceptance.md  plan.md  progress.md  spec.md
.moai/specs/SPEC-CANDLE-001/: acceptance.md  plan.md  spec-compact.md  spec.md
.moai/specs/SPEC-CYCLE-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-DB-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-DEPLOY-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-OBS-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-PROV-001/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-SCHED-001/: acceptance.md  plan.md  spec.md
api/: crypto-collector.yaml
charts/crypto-collector/: Chart.yaml  values.yaml
charts/crypto-collector/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  podmonitor.yaml  service.yaml
docs/: alarms.md  prediction-research.md
migrations/: 0001_registries.sql  0002_live_quotes.sql  0003_candles.sql  0004_coin_market_snapshots.sql  0005_derivatives_quotes.sql  0006_coin_metadata.sql  0007_collection_queue.sql  0008_backfill.sql  0009_upstream_pacer.sql  0010_coin_live_poll_interval.sql  0011_remove_markets.sql  0012_coin_backfill.sql  0013_cycle_overlay.sql  0014_collection_queue_cycle_overlay_kind.sql  0015_cycle_overlay_projected.sql  0016_collection_queue_rollup_kind.sql  0017_cycle_overlay_bands.sql  0018_bitstamp_pacer_seed.sql  0019_cycle_overlay_projection_model.sql  0020_coin_candles_departition.sql
src/: config.rs  lib.rs  listener.rs  main.rs
src/alarm/: catalog.rs  mod.rs  reconciler.rs  registry.rs
src/api/: candles.rs  candles_agg.rs  coin_market.rs  coins.rs  cursor.rs  cycle_overlay.rs  derivatives.rs  dto.rs  markets.rs  metadata.rs  mod.rs  poll_interval.rs  quotes.rs  websocket.rs
src/collectors/: backfill.rs  collection_queue.rs  cycle_overlay.rs  cycle_projection.rs  live_poller.rs  mod.rs  rollup.rs
src/db/: candles.rs  mod.rs  partitions.rs  pool.rs  upserts.rs
src/health/: mod.rs
src/metrics/: mod.rs
src/models/: coin.rs  cycle_overlay.rs  derivatives.rs  mod.rs  queue.rs  quote.rs
src/pacer/: mod.rs
src/providers/: binance.rs  bitstamp.rs  coinbase.rs  coingecko.rs  kraken.rs  mod.rs
src/telemetry/: mod.rs
tests/: alarm_docs_parity.rs  backtest_projection.rs  db_integration.rs  migration_files.rs  model_serde.rs
tests/fixtures/: btc_daily_close.csv
