[package]
name = "crypto-collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_collector"
path = "src/lib.rs"

[[bin]]
name = "crypto-collector"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database: sqlx 0.9 with NUMERIC → Decimal mapping (REQ-DB-040).
# Features: runtime-tokio (async pool), postgres, chrono (TIMESTAMPTZ), uuid, rust_decimal (NUMERIC), json (JSONB).
# No compile-time query! macros used in this SPEC — migrations run via sqlx::migrate!() at runtime.
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono", "uuid", "rust_decimal", "json"] }

# HTTP client: reqwest 0.13 for CoinGecko + exchange clients (SPEC-PROV-001, research §3.1).
# json: JSON body parsing. gzip: deflate large /coins/markets payloads.
reqwest = { version = "0.13", features = ["json", "gzip", "query"] }

# Async trait objects: enables Provider trait with async methods on Arc<dyn Provider>.
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
# arbitrary_precision: preserves JSON number representation as-is (no f64 conversion).
# Required so serde_json::Number::to_string() returns exact original string (e.g. "0.00000000001234")
# which then parses to rust_decimal::Decimal without floating-point loss (REQ-PROV-012, research §1.5).
serde_json = { version = "1", features = ["arbitrary_precision"] }

# Numeric precision: Decimal for all prices/supplies/funding (research §3.4, REQ-DB-040).
# serde-with-str: serialize Decimal as string to preserve full precision in JSON.
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Date/time: chrono for TIMESTAMPTZ ↔ DateTime<Utc> mapping. No chrono-tz (crypto: no calendar).
chrono = { version = "0.4", features = ["serde"] }

# UUIDs: worker/replica instance IDs, request IDs.
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Structured logging (tracing via JSON to stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP server: axum 0.8 + tower ecosystem (SPEC-API-001).
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
# Base64url encoding for opaque keyset cursors (REQ-API-070).
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1", features = ["v4"] }
# HTTP mock server for provider tests (tokio-native, no real network required).
wiremock = "0.6"
# In-process axum router testing (SPEC-API-001 handler tests).
axum-test = "20"
